# quimios-etl

./: .env  .env.example  .gitignore  Muestras.csv  PLAN.md  README.md  consulta.html  environment.yml  generate_mock_pages.py  login.html  muestras.py  muestras_modern.py  pyproject.toml  selectors.json  test-invalid.sh  test-valid.sh  test.db  test_e2e.db  test_e2e_full.db  test_e2e_runner.py
database/: init.sql
mock_pages/: consulta_page_1.html  consulta_page_10.html  consulta_page_11.html  consulta_page_12.html  consulta_page_13.html  consulta_page_14.html  consulta_page_15.html  consulta_page_16.html  consulta_page_17.html  consulta_page_18.html  consulta_page_19.html  consulta_page_2.html  consulta_page_20.html  consulta_page_21.html  consulta_page_22.html  consulta_page_23.html  consulta_page_24.html  consulta_page_25.html  consulta_page_3.html  consulta_page_4.html  consulta_page_5.html  consulta_page_6.html  consulta_page_7.html  consulta_page_8.html  consulta_page_9.html
src/lims_etl/: __main__.py  api_client.py  browser.py  config.py  database.py  scraper.py
tests/: test_database.py  test_integration.py  test_scraper.py
